Changelog
=========

Version 2.04
	Fixed issue 173: Unhandled exception when selecting files in Commit dialog - Working dir changes
	Fixed bug: spellings checker allows using Japanese
	Added possibility to pull non-default remote branch into current branch
	Added contributors to about box
	Improved startup speed
	Non-relative branches are drawn gray
	Pull dialog shows default remote branch if one is configured for local branch
	Removed ctr-c key from commit info control to allow copy part of commit info
	GitExtensions now can be used in Linux using Mono
	
Version 2.03
	Fixed bug: exception when deleting repository form dashboad using dashboardeditor
	Fixed bug: Settings for autocrlf are now the same as in the msysgit installer
	Fixed bug: revision header in commitinfo was not cleard between changing selection
	Fixed bug: branches with '/' are not handled correct
	Fixed bug: merge conflict dialog doesn't support spaces in filename
	Added option "showErrorsWhenStagingFiles" to hide wasernings when staging files
	Added basic file editor to replace vi
	Updated git to Git-1.7.2.3-preview20100911.exe
	Improved performance for rendering graph
	Added "Delete obsolete branches" plugin
	Improved cygwin support	

Version 2.02
	Fixed issue 149: the system just hangs during a fetch
	Fixed bug: changing encoding in settings is not saved properly
	Fixed bug: no branches found in remotes dialog
	Fixed bug: application shows exception and fails to close when application settings file is corrupt
	Fixed bug: "No commits" screen in revision grid not shown
	Fixed bug: "download gource" not working in gource plugin
	Fixed bug: encoding not handled correctly in commit message and filenames
	Fixed bug: blame doesn't refresh properly	
	Added "Copy filename to clipboard" to context menu's in browse dialog
	Last commit message is stored in settings so it can be used in multiple repositories

Version 2.01
	Fixed issue 144: encoding in 'Diff' view ignores settings